Release 1.1.0 with version-specific Bukkit and Paper builds